# RBE550-Workspace

./: .dockerignore  .gitignore  Dockerfile  README.md  activate.sh  commands.txt  logs_astar_maze.txt  logs_astar_seed42.txt  logs_bfs_maze.txt  logs_bfs_seed42.txt
architecture_diagrams/: architecture.puml  class_algorithms.puml  class_core.puml  sequence_bench_all.puml
maps/: maze_32.txt  maze_32_32.txt
report/: meljahmi_RBE550_ProjectFinalSubmission.docx
scripts/: activate.sh  build.sh  dev.sh  dev2.sh  dev3.sh  entrypoint.sh  feed_rviz_demo.sh  plot_from_logs.py  record_screen.sh  run.sh  run_all_benchmarks.sh  run_check.sh  run_demo.sh  run_docker.sh  run_maze32.sh  run_random32.sh  run_random64.sh  run_rviz.sh  start.sh  test_with_rviz.sh
scripts/dev/: demo_flicker.sh  test_no_rviz.sh
src/rbe550_grid_bench/: package.xml  setup.cfg  setup.py
src/rbe550_grid_bench/config/: rbe550.rviz
src/rbe550_grid_bench/launch/: bench.launch.py
src/rbe550_grid_bench/rbe550_grid_bench/: bench_runner.py  cli.py  grid_utils.py  metrics.py  neighbors.py  planner_node.py  plot_bench_all.py  rviz_helpers.py
src/rbe550_grid_bench/rbe550_grid_bench/algorithms/: astar.py  base.py  bfs.py  dijkstra.py  greedy.py  jps.py  theta.py  weighted_astar.py
src/rbe550_grid_bench/rbe550_grid_bench/maps/: maze_32.txt
src/rbe550_grid_bench/resource/: rbe550_grid_bench
