cat > ~/ros2projrbe550_ws/src/rbe550_grid_bench/package.xml <<'XML'
<?xml version="1.0"?>
<package format="3">
  <name>rbe550_grid_bench</name>
  <version>0.1.0</version>
  <description>RBE-550 gridworld benchmark (Python, ament_python)</description>
  <maintainer email="you@example.com">Mohamed Eljahmi</maintainer>
  <license>MIT</license>

  <!-- Python build system -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime deps -->
  <exec_depend>python3</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
</package>
XML

