<?xml version="1.0"?>
<package format="3">
  <name>rbe550_grid_bench</name>
  <version>0.1.0</version>
  <description>RBE-550 grid benchmark</description>
  <maintainer email="meeljahmi@wpi.edu">Your Name</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>python3</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

