[develop]
script-dir=$base/lib/rbe550_grid_bench
[install]
install-scripts=$base/lib/rbe550_grid_bench  
[options.entry_points]
console_scripts =
    bench = rbe550_grid_bench.cli:main
    planner_node = rbe550_grid_bench.planner_node:main
    plot_bench = rbe550_grid_bench.plot_bench_all:main

[options.data_files]
share/ament_index/resource_index/packages =
    rbe550_grid_bench
share/rbe550_grid_bench =
    package.xml
share/rbe550_grid_bench/maps =
    maps/maze_32.txt
share/rbe550_grid_bench/launch =
    launch/bench.launch.py



